--- a/projects.yaml
+++ b/projects.yaml
@@ -1,6 +1,16 @@
 configuration:
   markdown_header_file: "config/header.md"
   markdown_footer_file: "config/footer.md"
+  min_description_length: 0
+  max_description_length: 1000  # don't truncate descriptions
+  min_stars: 0
+  min_projectrank: 0
+  require_homepage: false
+  require_license: false
+  allowed_licenses: ["all"]
+  project_inactive_months: 12
+  project_dead_months: 999999  # 60 to check
+  hide_license_risk: True
 
 categories:
    - category: aerial
