--- a/projects.yaml
+++ b/projects.yaml
@@ -88,7 +88,7 @@ projects:
      labels: []
      category: autopilot
    - name: Betaflight
-     github_id: betaflight/betaflight
+     gitlab_id: djtms/betaflight
      labels: []
      category: autopilot
    - name: Crazyflie
