--- a/projects.yaml
+++ b/projects.yaml
@@ -88,10 +88,14 @@ projects:
      labels: []
      category: autopilot
    - name: Betaflight
-     github_id: betaflight/betaflight
      gitlab_id: djtms/betaflight
      labels: []
      category: autopilot
+     homepage: "https://gitlab.com/djtms/betaflight"
+     description: "Open Source Flight Controller Firmware"
+     license: "GPL-3.0"
+     star_count: 10000
+     show: True
    - name: Crazyflie
      github_id: bitcraze/crazyflie-firmware
      labels: []
